tests/compile_fail/ktstr_test_min_cpus_exceeds_max.stderr
error: min_cpus (64) exceeds max_cpus (32). Set max_cpus explicitly.
 --> tests/compile_fail/ktstr_test_min_cpus_exceeds_max.rs:3:1
  |
3 | #[ktstr_test(min_cpus = 64, max_cpus = 32)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
